--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: My Block
+title: My Blog
 email: viet3042000@gmail.com
-SĐT : 123456789
-Github : viet3042000
+sđt : 123456789
+github : viet3042000
 description: >- # this means to ignore newlines until "baseurl:"
   
 baseurl: "Blog" # the subpath of your site, e.g. /blog
