--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: My Blog
-email: viet3042000@gmail.
+email: viet3042000@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   
 baseurl: "Blog" # the subpath of your site, e.g. /blog
