--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
+---
+city: San Francisco
+---
+
 title: My Blog
 email: viet3042000@gmail.com
+{{ _config.city }}
 description: >- # this means to ignore newlines until "baseurl:"
   
 baseurl: "Blog" # the subpath of your site, e.g. /blog
